--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Tracking Money</title>
+    <title>Catat Uangku</title>
   </head>
   <body>
     <div id="root"></div>
